k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-devops
  labels:
    app.kubernetes.io/name: demo-devops-python
    app.kubernetes.io/managed-by: kubectl
