k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-python
  namespace: demo-devops
  labels:
    app.kubernetes.io/name: demo-devops-python
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: demo-devops-python
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
